--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -29,8 +29,9 @@
               {% endblock %}
               {% block extra_body %}  
             {% endblock %}
+          </div>
         </div>
       </div>
-    </div>
+      {% include 'partials/chat-bot.html' %}
   </body>
 </html>
