--- a/templates/index/1.html
+++ b/templates/index/1.html
@@ -769,5 +769,6 @@
 		<script src="/static/js/script.js"></script>
 
 		{% include 'partials/theme-script.html' %}
+		{% include 'partials/chat-bot.html' %}
 	</body>
 </html>
