--- a/templates/index/2.html
+++ b/templates/index/2.html
@@ -783,6 +783,7 @@
 <script src="/static/js/owl.js"></script>
 <script src="/static/js/script.js"></script>
 {% include 'partials/theme-script.html' %}
+{% include 'partials/chat-bot.html' %}
 </body>
 <!-- index-2,  18:20:58 GMT -->
 </html>
