--- a/templates/index/7.html
+++ b/templates/index/7.html
@@ -758,6 +758,7 @@
 <script src="/static/js/script.js"></script>
 
 {% include 'partials/theme-script.html' %}
+{% include 'partials/chat-bot.html' %}
 </body>
 
 <!-- index-7,  18:21:39 GMT -->
