--- a/templates/index/8.html
+++ b/templates/index/8.html
@@ -595,6 +595,7 @@
 <script src="/static/js/script.js"></script>
 
 {% include 'partials/theme-script.html' %}
+{% include 'partials/chat-bot.html' %}
 </body>
 
 <!-- index-8,  18:21:42 GMT -->
