--- a/templates/index/9.html
+++ b/templates/index/9.html
@@ -680,6 +680,7 @@
 <script src="/static/js/script.js"></script>
 
 {% include 'partials/theme-script.html' %}
+{% include 'partials/chat-bot.html' %}
 </body>
 
 <!-- index-10,  18:21:50 GMT -->
