--- a/templates/newsletter/base.html
+++ b/templates/newsletter/base.html
@@ -71,5 +71,6 @@
         <i class="fas fa-angle-up"></i>
     </a>
     {% include 'partials/js.html' %}
+    {% include 'partials/chat-bot.html' %}
 </body>
 </html>
