--- a/templates/edu/base.html
+++ b/templates/edu/base.html
@@ -40,6 +40,7 @@
         {% include 'partials/footer.html' %}
 
     {% include 'partials/js.html' %}
+    {% include 'partials/chat-bot.html' %}
 </body>
 
 </html>
