--- a/templates/index/3.html
+++ b/templates/index/3.html
@@ -776,6 +776,7 @@
 <script src="/static/js/owl.js"></script>
 <script src="/static/js/script.js"></script>
 {% include 'partials/theme-script.html' %}
+{% include 'partials/chat-bot.html' %}
 </body>
 
 <!-- index-3,  18:21:12 GMT -->
