--- a/templates/index/4.html
+++ b/templates/index/4.html
@@ -855,6 +855,7 @@
 <script src="/static/js/owl.js"></script>
 <script src="/static/js/script.js"></script>
 {% include 'partials/theme-script.html' %}
+{% include 'partials/chat-bot.html' %}
 </body>
 
 <!-- index-4,  18:21:25 GMT -->
