--- a/templates/index/5.html
+++ b/templates/index/5.html
@@ -747,6 +747,7 @@
 <script src="/static/js/owl.js"></script>
 <script src="/static/js/script.js"></script>
 {% include 'partials/theme-script.html' %}
+{% include 'partials/chat-bot.html' %}
 </body>
 
 <!-- index-5,  18:21:35 GMT -->
