--- a/templates/index/6.html
+++ b/templates/index/6.html
@@ -624,6 +624,7 @@
 <script src="/static/js/script.js"></script>
 
 {% include 'partials/theme-script.html' %}
+{% include 'partials/chat-bot.html' %}
 </body>
 
 <!-- index-6,  18:21:39 GMT -->
