--- a/templates/edu/index.html
+++ b/templates/edu/index.html
@@ -44,26 +44,31 @@
         {% endfor %}
     </div>
     {% endif %}
+    {% if next_page or previous_page %}
     <div class="d-flex justify-content-end bg-white p-2">
         <nav aria-label="Page navigation">
             <ul class="pagination">
-                <li class="page-item disabled">
-                    <a class="page-link" href="#" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
+                {% if previous_page %}
+                <li class="page-item">
+                    <a class="page-link" href="{{link}}?page={{previous_page}}" aria-label="Previous">
+                        <span aria-hidden="true"><i class="fa fa-arrow-circle-left"></i> <i class="fa fa-arrow-left" aria-hidden="true"></i></span>
                         <span class="sr-only">Previous</span>
                     </a>
                 </li>
-                <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                {% endif %}
+                <li class="page-item bg-primary current"><a class="page-link " href="#">{{current_page}}</a></li>
+                {% if next_page %}
                 <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
+                    <a class="page-link" href="{{link}}?page={{next_page}}" aria-label="Next">
+                        <span aria-hidden="true"><i class="fa fa-arrow-circle-right"></i></span>
                         <span class="sr-only">Next</span>
                     </a>
                 </li>
+                {% endif %}
             </ul>
         </nav>
     </div>
+    {% endif %}
 </div>
 
 </div>
