--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -4,7 +4,7 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h2 class="text-center">{% trans "Change Password" %}</h2>
+    <h1 class="h4 text-center">{% trans "Change Password" %}</h1>
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
