--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-    <h2 class="text-center">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h2>
+    <h1 class="h4 text-center">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}</h1>
 
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
