--- a/templates/account/account_inactive.html
+++ b/templates/account/account_inactive.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Account Inactive" %}{% endblock %}
 
 {% block content %}
-<h2 class="text-center">{% trans "Account Inactive" %}</h2>
+<h1 class="text-center h4">{% trans "Account Inactive" %}</h1>
 
-<p class="alert alert-danger text-center">{% trans "This account is inactive." %}</p>
+<p class="alert alert-danger text-center alert-sm">{% trans "This account is inactive." %}</p>
 {% endblock %}
