--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "E-mail Addresses" %}{% endblock %}
 
 {% block content %}
-    <h2 class="text-center">{% trans "E-mail Addresses" %}</h2>
+    <h1 class="text-center h4">{% trans "E-mail Addresses" %}</h1>
 {% if user.emailaddress_set.all %}
 <p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
 
@@ -45,7 +45,7 @@
 {% endif %}
 
   {% if can_add_email %}
-    <h3>{% trans "Add E-mail Address" %}</h3>
+    <h2 class="h5">{% trans "Add E-mail Address" %}</h2>
 
     <form method="post" action="{% url 'account_email' %}" class="add_email">
         {% csrf_token %}
