--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -12,18 +12,18 @@
 
 {% block content %}
 
-<h2 class="text-center">{% trans "Login" %}</h2>
+<h1 class="text-center h4">{% trans "Login" %}</h1>
 
 {% get_providers as socialaccount_providers %}
 
 {% if socialaccount_providers %}
 <p>{% blocktrans with site.name as site_name %}Please sign in with one
 of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-for {{ site_name }} account and sign in below:{% endblocktrans %}</p>
+for {{ site_name }}:{% endblocktrans %}</p>
 
 <div class="socialaccount_ballot">
 
-  <span class="socialaccount_providers d-flex justify-content-center">
+  <span class="socialaccount_providers">
     {% include "socialaccount/snippets/provider_list.html" with process="login" %}
   </span>
 
@@ -45,7 +45,7 @@ for {{ site_name }} account and sign in below:{% endblocktrans %}</p>
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
   <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="primaryAction theme-btn btn-style-one w-100" type="submit">{% trans "Login" %}</button>
+  <button class="primaryAction theme-btn btn-style-one w-100 rounded rounded-pill py-2" type="submit">{% trans "Login" %}</button>
 </form>
 
 {% endblock %}
