--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<h2 class="text-center">{% trans "Sign Out" %}</h2>
+<h1 class="h4 text-center">{% trans "Sign Out" %}</h1>
 
 <p class="text-center">{% trans 'Are you sure you want to sign out?' %}</p>
 
