--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-    <h2 class="text-center">{% trans "Password Reset" %}</h2>
+    <h1 class="h4 text-center">{% trans "Password Reset" %}</h1>
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
