--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -6,7 +6,7 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
-    <h2 class="text-center">{% trans "Password Reset" %}</h2>
+    <h1 class="h4 text-center">{% trans "Password Reset" %}</h1>
     
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
