--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -5,7 +5,7 @@
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 {% block content %}
-    <h2 class="text-center">{% trans "Set Password" %}</h2>
+    <h1 class="h4 text-center">{% trans "Set Password" %}</h1>
 
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
