--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -11,7 +11,7 @@
 {% block head_title %}{% trans "Register" %}{% endblock %}
 
 {% block content %}
-<h2 class="text-center">{% trans "Sign Up" %}</h2>
+<h1 class="h4 text-center">{% trans "Sign Up" %}</h1>
 
 <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">Login</a>.{% endblocktrans %}</p>
 
