--- a/templates/account/verified_email_required.html
+++ b/templates/account/verified_email_required.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
 {% block content %}
-<h2 class="text-center">{% trans "Verify Your E-mail Address" %}</h2>
+<h1 class="h4 text-center">{% trans "Verify Your E-mail Address" %}</h1>
 
 {% url 'account_email' as email_url %}
 
