--- a/templates/socialaccount/authentication_error.html
+++ b/templates/socialaccount/authentication_error.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Social Network Login Failure" %}{% endblock %}
 
 {% block content %}
-<h2 class="text-center">{% trans "Social Network Login Failure" %}</h2>
+<h1 class="h4 text-center">{% trans "Social Network Login Failure" %}</h1>
 
 <p class="alert alert-danger">{% trans "An error occurred while attempting to login via your social network account." %}</p>
 {% endblock %}
