--- a/templates/socialaccount/connections.html
+++ b/templates/socialaccount/connections.html
@@ -5,13 +5,13 @@
 {% block head_title %}{% trans "Account Connections" %}{% endblock %}
 
 {% block content %}
-<h2>{% trans "Account Connections" %}</h2>
+<h1 class="h4 text-center">{% trans "Account Connections" %}</h1>
 
 {% if form.accounts %}
 <p>{% blocktrans %}You can sign in to your account using any of the following third party accounts:{% endblocktrans %}</p>
 
 
-<form method="post" action="{% url 'socialaccount_connections' %}">
+<form method="post" action="{% url 'socialaccount_connections' %}" class="p-3">
 {% csrf_token %}
 
 <fieldset>
@@ -32,7 +32,7 @@
 {% endfor %}
 
 <div>
-<button type="submit" class="theme-btn btn-style-one">{% trans 'Remove' %}</button>
+<button type="submit" class="theme-btn btn-style-one rounded rounded-pill w-100 py-2">{% trans 'Remove' %}</button>
 </div>
 
 </fieldset>
@@ -43,7 +43,7 @@
 <p>{% trans 'You currently have no social network accounts connected to this account.' %}</p>
 {% endif %}
 
-<h3>{% trans 'Add a 3rd Party Account' %}</h3>
+<h2 class="h5 text-center">{% trans 'Add a 3rd Party Account' %}</h2>
 
 <ul class="socialaccount_providers">
 {% include "socialaccount/snippets/provider_list.html" with process="connect" %}
