--- a/templates/socialaccount/login.html
+++ b/templates/socialaccount/login.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 {% if process == "connect" %}
-<h2 class="text-center">{% blocktrans with provider.name as provider %}Connect {{ provider }}{% endblocktrans %}</h2>
+<h1 class="text-center h4">{% blocktrans with provider.name as provider %}Connect {{ provider }}{% endblocktrans %}</h1>
 
 <p>{% blocktrans with provider.name as provider %}You are about to connect a new third party account from {{ provider }}.{% endblocktrans %}</p>
 {% else %}
