--- a/templates/socialaccount/login_cancelled.html
+++ b/templates/socialaccount/login_cancelled.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<h2 class="text-center">{% trans "Login Cancelled" %}</h2>
+<h1 class="text-center h4">{% trans "Login Cancelled" %}</h1>
 
 {% url 'account_login' as login_url %}
 
