added google tags

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,16 @@
 
 <!-- index,  18:17:52 GMT -->
 <head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-10926755664"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-10926755664');
+</script>
         <!-- Google tag (gtag.js) -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-99WZSD0FEW"></script>
         <script>
