--- a/templates/edu/index.html
+++ b/templates/edu/index.html
@@ -24,7 +24,7 @@
         {% for note in notes %}
         <div class="news-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp animated"
             style="visibility: visible; animation-name: fadeInUp;">
-            <div class="inner-box">
+            <div class="inner-box border-0">
                 <div class="content-box">
                     <ul class="post-info">
                         <li><i class="fa fa-user"></i> by {{ note.user.get_full_name|default:'No Name'}}</li>
@@ -50,16 +50,16 @@
             <ul class="pagination">
                 {% if previous_page %}
                 <li class="page-item">
-                    <a class="page-link" href="{{link}}?page={{previous_page}}" aria-label="Previous">
-                        <span aria-hidden="true"><i class="fa fa-arrow-circle-left"></i> <i class="fa fa-arrow-left" aria-hidden="true"></i></span>
+                    <a class="page-link text-primary border border-warning" href="{{link}}?page={{previous_page}}" aria-label="Previous">
+                        <span aria-hidden="true"><i class="fa fa-arrow-circle-left"></i></span>
                         <span class="sr-only">Previous</span>
                     </a>
                 </li>
                 {% endif %}
-                <li class="page-item bg-primary current"><a class="page-link " href="#">{{current_page}}</a></li>
+                <li class="page-item bg-primary current"><a class="page-link bg-primary border-0" href="#">{{current_page}}</a></li>
                 {% if next_page %}
                 <li class="page-item">
-                    <a class="page-link" href="{{link}}?page={{next_page}}" aria-label="Next">
+                    <a class="page-link text-primary border border-warning" href="{{link}}?page={{next_page}}" aria-label="Next">
                         <span aria-hidden="true"><i class="fa fa-arrow-circle-right"></i></span>
                         <span class="sr-only">Next</span>
                     </a>
