remove unused logos

--- a/templates/index/1.html
+++ b/templates/index/1.html
@@ -74,7 +74,7 @@
 					<!-- Slide 1 -->
 					<li data-index="rs-1" data-transition="zoomout">
 						<!-- MAIN IMAGE -->
-						<img src="/static/images/main-slider/1.png" alt="" class="rev-slidebg">
+						<img src="/static/images/main-slider/slider-2.jpeg" alt="" class="rev-slidebg">
 
 						<div class="tp-caption tp-resizeme rs-parallaxlevel-3 hidden-mobile"
 						data-paddingbottom="[0,0,0,0]"
@@ -170,7 +170,7 @@
 					<!-- Slide 2 -->
 					<li data-index="rs-2" data-transition="zoomin">
 						<!-- MAIN IMAGE -->
-						<img src="/static/images/main-slider/2.png" alt="" class="rev-slidebg">
+						<img src="/static/images/main-slider/slider-4.jpeg" alt="" class="rev-slidebg">
 
 						<div class="tp-caption tp-resizeme rs-parallaxlevel-3 hidden-mobile"
 						data-paddingbottom="[0,0,0,0]"
