--- a/templates/index/2.html
+++ b/templates/index/2.html
@@ -169,7 +169,7 @@
 		<div class="banner-carousel owl-carousel owl-theme">
 			<!-- Slide Item -->
 			<div class="slide-item">
-				<div class="bg-image" style="background-image: url(/static/images/main-slider/IMG_8924.JPG);"></div>
+				<div class="bg-image" style="background-image: url(/static/images/main-slider/slider-1.jpeg);"></div>
 				<div class="auto-container">
 					<div class="content-box">
 						<span class="sub-title animate-1">Maximize Productivity</span>
@@ -184,7 +184,7 @@
 
 			<!-- Slide Item -->
 			<div class="slide-item">
-				<div class="bg-image" style="background-image: url(/static/images/main-slider/IMG_8916.JPG);"></div>
+				<div class="bg-image" style="background-image: url(/static/images/main-slider/slider-3.jpeg);"></div>
 				<div class="auto-container">
 					<div class="content-box">
 						<span class="sub-title animate-1">Tailored for You</span>
