update contact details

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -68,7 +68,7 @@
 								</div>
 								<div class="text">
 									<h6>Have any question?</h6>
-									<a href="tel:{{ about.phone_number|default:'+254795067776' }}"><span>Free</span> {{ about.phone_number|default:'+254795067776' }}</a>
+									<a href="tel:{{ about.phone_number|default:'+254748155432' }}"><span>Free</span> {{ about.phone_number|default:'+254748155432' }}</a>
 								</div>
 							</li>
 							<li>
@@ -77,7 +77,7 @@
 								</div>
 								<div class="text">
 									<h6>Write email</h6>
-									<a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a>
+									<a href="mailto:{{ about.email|default:'support@vstech.co.ke' }}">{{ about.email|default:'support@vstech.co.ke' }}</a>
 								</div>
 							</li>
 							<li>
