--- a/templates/index/3.html
+++ b/templates/index/3.html
@@ -230,11 +230,6 @@
 
 						<div class="btn-box d-flex">
 							<a href="{% url 'about' %}" class="theme-btn btn-style-one"><span class="btn-title">Discover more</span></a>
-							<div class="founder-info">
-								<div class="thumb"><img src="/static/ceo.jpeg" alt="CEO, VSTech Limited, Jeff Odhiambo"></div>
-								<h5 class="name">Jeff Odhiambo</h5>
-								<span class="designation">Founder</span>
-							</div>
 						</div>
 					</div>
 				</div>
@@ -682,8 +677,8 @@
 						<h5 class="title">Nairobi</h5>
 						<ul class="info-list">
 							<li>{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</li>
-							<li><a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a></li>
-							<li><a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a></li>
+							<li><a href="mailto:{{ about.email|default:'support@vstech.co.ke' }}">{{ about.email|default:'support@vstech.co.ke' }}</a></li>
+							<li><a href="tel:{{ about.phone_number|default:'+254748155432' }}">{{ about.phone_number|default:'+254748155432' }}</a></li>
 						</ul>
 					</div>
 				</div>
@@ -694,8 +689,8 @@
 						<h5 class="title">Nairobi</h5>
 						<ul class="info-list">
 							<li>{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</li>
-							<li><a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a></li>
-							<li><a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a></li>
+							<li><a href="mailto:{{ about.email|default:'support@vstech.co.ke' }}">{{ about.email|default:'support@vstech.co.ke' }}</a></li>
+							<li><a href="tel:{{ about.phone_number|default:'+254748155432' }}">{{ about.phone_number|default:'+254748155432' }}</a></li>
 						</ul>
 					</div>
 				</div>
@@ -706,8 +701,8 @@
 						<h5 class="title">Nairobi</h5>
 						<ul class="info-list">
 							<li>{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</li>
-							<li><a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a></li>
-							<li><a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a></li>
+							<li><a href="mailto:{{ about.email|default:'support@vstech.co.ke' }}">{{ about.email|default:'support@vstech.co.ke' }}</a></li>
+							<li><a href="tel:{{ about.phone_number|default:'+254748155432' }}">{{ about.phone_number|default:'+254748155432' }}</a></li>
 						</ul>
 					</div>
 				</div>
@@ -718,8 +713,8 @@
 						<h5 class="title">Nairobi</h5>
 						<ul class="info-list">
 							<li>{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</li>
-							<li><a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a></li>
-							<li><a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a></li>
+							<li><a href="mailto:{{ about.email|default:'support@vstech.co.ke' }}">{{ about.email|default:'support@vstech.co.ke' }}</a></li>
+							<li><a href="tel:{{ about.phone_number|default:'+254748155432' }}">{{ about.phone_number|default:'+254748155432' }}</a></li>
 						</ul>
 					</div>
 				</div>
