--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -47,8 +47,8 @@
                                 </div>
                             </div>
                             <ul class="contact-info">
-                                <li><i class="fa fa-envelope"></i> <a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a><br></li>
-                                <li><i class="fa fa-phone-square"></i> <a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a><br></li>
+                                <li><i class="fa fa-envelope"></i> <a href="mailto:{{ about.email|default:'support@vstech.co.ke' }}">{{ about.email|default:'support@vstech.co.ke' }}</a><br></li>
+                                <li><i class="fa fa-phone-square"></i> <a href="tel:{{ about.phone_number|default:'+254748155432' }}">{{ about.phone_number|default:'+254748155432' }}</a><br></li>
                             </ul>
                             <ul class="user-links mt-4">
                                 <li><a href="{% url 'contact' %}">Contact us</a></li>
