--- a/templates/partials/top-nav.html
+++ b/templates/partials/top-nav.html
@@ -7,7 +7,7 @@
 				<div class="top-left">
 					<!-- Info List -->
 					<ul class="list-style-one">
-						<li><i class="fa fa-envelope"></i> <a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a></li>
+						<li><i class="fa fa-envelope"></i> <a href="mailto:{{ about.email|default:'support@vstech.co.ke' }}">{{ about.email|default:'support@vstech.co.ke' }}</a></li>
 						<li><i class="fa fa-map-marker"></i> {{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</li>
 					</ul>
 				</div>
@@ -70,9 +70,9 @@
 
 
 					<div class="outer-box">
-						<a href="tel:{{ about.phone_number|default:'+254795067776' }}" class="info-btn">
+						<a href="tel:{{ about.phone_number|default:'+254748155432' }}" class="info-btn">
 							<i class="icon fa fa-phone"></i>
-							<small>Call Anytime</small><br> {{ about.phone_number|default:'+254795067776' }}
+							<small>Call Anytime</small><br> {{ about.phone_number|default:'+254748155432' }}
 						</a>
 
 						<a href="/static/VSTech Portfolio.pdf" class="theme-btn btn-style-one"><span class="btn-title">View porfolio</span></a>
