--- a/templates/index/2.html
+++ b/templates/index/2.html
@@ -72,7 +72,7 @@
 				<div class="top-left">
 					<!-- Info List -->
 					<ul class="list-style-one">
-						<li><i class="fa fa-envelope"></i> <a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a></li>
+						<li><i class="fa fa-envelope"></i> <a href="mailto:{{ about.email|default:'support@vstech.co.ke' }}">{{ about.email|default:'support@vstech.co.ke' }}</a></li>
 						<li><i class="fa fa-map-marker"></i> {{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</li>
 					</ul>
 				</div>
@@ -136,9 +136,9 @@
 
 					<div class="outer-box">
 						
-						<a href="tel:{{ about.phone_number|default:'+254795067776' }}" class="info-btn">
+						<a href="tel:{{ about.phone_number|default:'+254748155432' }}" class="info-btn">
 							<i class="icon fa fa-phone"></i>
-							<small>Call Anytime</small><br> {{ about.phone_number|default:'+254795067776' }}
+							<small>Call Anytime</small><br> {{ about.phone_number|default:'+254748155432' }}
 						</a>
 
 						<a href="/static/VSTech Portfolio.pdf" class="theme-btn btn-style-one"><span class="btn-title">View porfolio</span></a>
@@ -451,15 +451,10 @@
 							</div>
 						</div>
 
-						<blockquote class="blockquote-style-one">"Embrace technology's transformative power. With VSTech Limited, we drive innovation to empower growth and endless possibilities." - CEO, Jeff</blockquote>
+						<blockquote class="blockquote-style-one">"Embrace technology's transformative power. With VSTech Limited, we drive innovation to empower growth and endless possibilities." - CEO</blockquote>
 
 						<div class="btn-box d-flex">
 							<a href="{% url 'about' %}" class="theme-btn btn-style-one"><span class="btn-title">Discover more</span></a>
-							<div class="founder-info">
-								<div class="thumb"><img src="/static/ceo.jpeg" alt="CEO"></div>
-								<h5 class="name">Jeff Odhiambo</h5>
-								<span class="designation">Founder</span>
-							</div>
 						</div>
 					</div>
 				</div>
@@ -582,9 +577,9 @@
 					<span class="location-dot"></span>
 					<div class="location-info">
 						<ul class="info-list">
-							<li><a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a></li>
+							<li><a href="tel:{{ about.phone_number|default:'+254748155432' }}">{{ about.phone_number|default:'+254748155432' }}</a></li>
 							<li>{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</li>
-							<li><a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a></li>
+							<li><a href="mailto:{{ about.email|default:'support@vstech.co.ke' }}">{{ about.email|default:'support@vstech.co.ke' }}</a></li>
 						</ul>
 					</div>
 				</div>
@@ -594,9 +589,9 @@
 					<span class="location-dot"></span>
 					<div class="location-info">
 						<ul class="info-list">
-							<li><a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a></li>
+							<li><a href="tel:{{ about.phone_number|default:'+254748155432' }}">{{ about.phone_number|default:'+254748155432' }}</a></li>
 							<li>{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</li>
-							<li><a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a></li>
+							<li><a href="mailto:{{ about.email|default:'support@vstech.co.ke' }}">{{ about.email|default:'support@vstech.co.ke' }}</a></li>
 						</ul>
 					</div>
 				</div>
@@ -606,9 +601,9 @@
 					<span class="location-dot"></span>
 					<div class="location-info">
 						<ul class="info-list">
-							<li><a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a></li>
+							<li><a href="tel:{{ about.phone_number|default:'+254748155432' }}">{{ about.phone_number|default:'+254748155432' }}</a></li>
 							<li>{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</li>
-							<li><a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a></li>
+							<li><a href="mailto:{{ about.email|default:'support@vstech.co.ke' }}">{{ about.email|default:'support@vstech.co.ke' }}</a></li>
 						</ul>
 					</div>
 				</div>
@@ -618,9 +613,9 @@
 					<span class="location-dot"></span>
 					<div class="location-info">
 						<ul class="info-list">
-							<li><a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a></li>
+							<li><a href="tel:{{ about.phone_number|default:'+254748155432' }}">{{ about.phone_number|default:'+254748155432' }}</a></li>
 							<li>{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</li>
-							<li><a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a></li>
+							<li><a href="mailto:{{ about.email|default:'support@vstech.co.ke' }}">{{ about.email|default:'support@vstech.co.ke' }}</a></li>
 						</ul>
 					</div>
 				</div>
@@ -630,9 +625,9 @@
 					<span class="location-dot"></span>
 					<div class="location-info">
 						<ul class="info-list">
-							<li><a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a></li>
+							<li><a href="tel:{{ about.phone_number|default:'+254748155432' }}">{{ about.phone_number|default:'+254748155432' }}</a></li>
 							<li>{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</li>
-							<li><a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a></li>
+							<li><a href="mailto:{{ about.email|default:'support@vstech.co.ke' }}">{{ about.email|default:'support@vstech.co.ke' }}</a></li>
 						</ul>
 					</div>
 				</div>
@@ -684,7 +679,7 @@
 							<div class="info-box">
 								<span class="icon flaticon-business-035-helpline"></span>
 								<span class="sub-title">Call us and book now</span>
-								<h3 class="title"><a href="tel:{{ about.phone_number|default:'0795067776' }}">{{ about.phone_number|default:'0795067776' }}</a></h3>
+								<h3 class="title"><a href="tel:{{ about.phone_number|default:'0748155432' }}">{{ about.phone_number|default:'0748155432' }}</a></h3>
 							</div>
 						</div>
 					</div>
