--- a/templates/page-pricing.html
+++ b/templates/page-pricing.html
@@ -36,7 +36,7 @@
 				<div class="top-left">
 					<!-- Info List -->
 					<ul class="list-style-one">
-						<li><i class="fa fa-envelope"></i> <a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a></li>
+						<li><i class="fa fa-envelope"></i> <a href="mailto:{{ about.email|default:'support@vstech.co.ke' }}">{{ about.email|default:'support@vstech.co.ke' }}</a></li>
 						<li><i class="fa fa-map-marker"></i> {{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }} New York</li>
 					</ul>
 				</div>
@@ -114,7 +114,7 @@
 						<div class="contact-info-box">
 							<i class="icon lnr-icon-phone-handset"></i>
 							<span class="title">Call Now</span>
-							<a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a>
+							<a href="tel:{{ about.phone_number|default:'+254748155432' }}">{{ about.phone_number|default:'+254748155432' }}</a>
 						</div>
 					</li>
 					<li>
@@ -122,7 +122,7 @@
 						<div class="contact-info-box">
 							<span class="icon lnr-icon-envelope1"></span>
 							<span class="title">Send Email</span>
-							<a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a>
+							<a href="mailto:{{ about.email|default:'support@vstech.co.ke' }}">{{ about.email|default:'support@vstech.co.ke' }}</a>
 						</div>
 					</li>
 					<li>
@@ -320,8 +320,8 @@
 							<div class="widget-content">
 								<div class="text">{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</div>
 								<ul class="contact-info">
-									<li><i class="fa fa-envelope"></i> <a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a><br></li>
-									<li><i class="fa fa-phone-square"></i> <a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a><br></li>
+									<li><i class="fa fa-envelope"></i> <a href="mailto:{{ about.email|default:'support@vstech.co.ke' }}">{{ about.email|default:'support@vstech.co.ke' }}</a><br></li>
+									<li><i class="fa fa-phone-square"></i> <a href="tel:{{ about.phone_number|default:'+254748155432' }}">{{ about.phone_number|default:'+254748155432' }}</a><br></li>
 								</ul>
 							</div>
 						</div>
