--- a/templates/partials/mobile_search_header.html
+++ b/templates/partials/mobile_search_header.html
@@ -19,7 +19,7 @@
                 <div class="contact-info-box">
                     <i class="icon lnr-icon-phone-handset"></i>
                     <span class="title">Call Now</span>
-                    <a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a>
+                    <a href="tel:{{ about.phone_number|default:'+254748155432' }}">{{ about.phone_number|default:'+254748155432' }}</a>
                 </div>
             </li>
             <li>
@@ -27,7 +27,7 @@
                 <div class="contact-info-box">
                     <span class="icon lnr-icon-envelope1"></span>
                     <span class="title">Send Email</span>
-                    <a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a>
+                    <a href="mailto:{{ about.email|default:'support@vstech.co.ke' }}">{{ about.email|default:'support@vstech.co.ke' }}</a>
                 </div>
             </li>
             <li>
